--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,7 +34,7 @@
     <!--End navigation-->
 
     <div id="homeHeading">
-    <img id="homeimg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\beach-2179361_1280.jpg" alt="Island Aerial View">
+    <img id="homeimg" src="\D479.task1\Images\beach-2179361_1280.jpg" alt="Island Aerial View">
         <p class="figureCiting">
         <span class="figureNumber">Figure 7:</span><br>
         <span class="figureTitle">Island beach landscape</span>
