--- a/artMuseums.html
+++ b/artMuseums.html
@@ -36,7 +36,7 @@
     <h2>Art and Museums</h2>
 
     <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\salzburg-89594_1280.jpg" alt="Art Gallery">
+        <img class="entertainmentImg" src="Images\salzburg-89594_1280.jpg" alt="Art Gallery">
             <p class="figureCiting">
             <span class="figureNumber">Figure 10:</span><br>
             <span class="figureTitle">Art gallery</span>
