--- a/entertainment.html
+++ b/entertainment.html
@@ -36,7 +36,7 @@
     <h2>Entertainment</h2>
 
     <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\md500-8068034_1280.jpg" alt="Helicopter">
+        <img class="entertainmentImg" src="Images\md500-8068034_1280.jpg" alt="Helicopter">
             <p class="figureCiting">
             <span class="figureNumber">Figure 3:</span><br>
             <span class="figureTitle">Helicopter</span>
