--- a/familyFriendly.html
+++ b/familyFriendly.html
@@ -36,7 +36,7 @@
     <h2>Family-friendly Entertainment</h2>
 
     <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\zipline-2399759_1280.jpg" alt="Zipline over rainforest">
+        <img class="entertainmentImg" src="Images\zipline-2399759_1280.jpg" alt="Zipline over rainforest">
             <p class="figureCiting" id="altBackgroundBlue">
             <span class="figureNumber">Figure 11:</span><br>
             <span class="figureTitle">Zipline in forestry</span>
