--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <!--Image and title-->
     <div id="homeHeading">
-    <img id="homeimg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\beach-1761410_1280.jpg" alt="Beach">
+    <img id="homeimg" src="Images\beach-1761410_1280.jpg" alt="Beach">
         <p class="figureCiting">
         <span class="figureNumber">Figure 1:</span><br>
         <span class="figureTitle">Beach with palm trees</span>
@@ -44,7 +44,7 @@
    </p> 
    <!--Main Content-->
    <div class="mainContent">
-   <img class="sideImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\palm-3147769_1280.jpg" alt="Palm trees at sunset">
+   <img class="sideImg" src="Images\palm-3147769_1280.jpg" alt="Palm trees at sunset">
         <p class="figureCiting" id="altBackgroundBlue">
         <span class="figureNumber">Figure 2:</span><br>
         <span class="figureTitle">Palm trees with pink sunset</span>    
