--- a/localEats.html
+++ b/localEats.html
@@ -36,7 +36,7 @@
     <h2>Local Eats</h2>
 
     <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\beach-2653182_1280.jpg" alt="Oceanside Restaurant">
+        <img class="entertainmentImg" src="Images\beach-2653182_1280.jpg" alt="Oceanside Restaurant">
             <p class="figureCiting" id="altBackgroundCream">
             <span class="figureNumber">Figure 6:</span><br>
             <span class="figureTitle">Beachside restaurant</span>
