--- a/lodging.html
+++ b/lodging.html
@@ -36,7 +36,7 @@
     <h2>Lodging</h2>
 
        <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\beach-5723578_1280.jpg" alt="Oceanside Restaurant">
+        <img class="entertainmentImg" src="Images\beach-5723578_1280.jpg" alt="Oceanside Restaurant">
             <p class="figureCiting">
             <span class="figureNumber">Figure 4:</span><br>
             <span class="figureTitle">Beach resort</span>
