--- a/nightlife.html
+++ b/nightlife.html
@@ -36,7 +36,7 @@
     <h2>Night Life</h2>
 
       <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\party-4114985_1280.jpg" alt="Dance Club">
+        <img class="entertainmentImg" src="Images\party-4114985_1280.jpg" alt="Dance Club">
             <p class="figureCiting">
             <span class="figureNumber">Figure 9:</span><br>
             <span class="figureTitle">Spotlight party scene</span>
