--- a/outdoors.html
+++ b/outdoors.html
@@ -35,7 +35,7 @@
 
     <h2>Outdoors</h2>
     <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\rivers-329816_1280.jpg" alt="Snorkeling Gear">
+        <img class="entertainmentImg" src="Images\rivers-329816_1280.jpg" alt="Snorkeling Gear">
             <p class="figureCiting" id="altBackgroundCream">
             <span class="figureNumber">Figure 8:</span><br>
             <span class="figureTitle">Snorkeling gear</span>
