--- a/romantic.html
+++ b/romantic.html
@@ -35,7 +35,7 @@
     <h2>Romantic Entertainment</h2>
 
         <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\beach-7087722_1280.jpg" alt="Couple on beach">
+        <img class="entertainmentImg" src="Images\beach-7087722_1280.jpg" alt="Couple on beach">
                 <p class="figureCiting" id="altBackgroundBlue">
                 <span class="figureNumber">Figure 12:</span><br>
                 <span class="figureTitle">Beach sunset with couple silhouette</span>
