--- a/transportation.html
+++ b/transportation.html
@@ -36,7 +36,7 @@
     <h2>Transportation</h2>
 
           <div class="mainContent">
-        <img class="entertainmentImg" src="C:\Users\fees7\OneDrive\Desktop\D479.task1\Images\bike-rental-1028952_1280.jpg" alt="Beach Bikes">
+        <img class="entertainmentImg" src="Images\bike-rental-1028952_1280.jpg" alt="Beach Bikes">
             <p class="figureCiting" id="altBackgroundBlue">
             <span class="figureNumber">Figure 5:</span><br>
             <span class="figureTitle">Three bikes on a beach</span>
